# mcp-chatbot

./: README.md  pyproject.toml  vercel.json
app/: crud.py  data.json  main.py  mcpserver.py
